Alterações na barra de rolagem

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,22 @@
 html,body{
     overflow: hidden;
 }
+*{
+  scrollbar-width: thin;
+  scrollbar-color:white #232323;
+}
+*::-webkit-scrollbar{
+  width:12px;
+
+}
+*::-webkit-scrollbar-track{
+  background: #fff;
+}
+*::-webkit-scrollbar-thumb{
+  background-color: #232323;
+  border-radius: 20px;
+  border:3px solid #4b4a4a;
+}
 .alert-container{
     position: absolute;
     top:0;
